fix logo sizes and remove horizontal scrolling.

--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -7,7 +7,6 @@
   margin: 0 0 100px;
   padding: 100px 0 0;
   color: #000000;
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,7 +33,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 1181px;
+  max-width: 1181px;
   gap: 100px;
   margin: 100px 0 0;
 }
