--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -5,9 +5,9 @@
 
 .nav__logo {
   position: relative;
-  left: -50px;
+  left: -20px;
   width: 105px;
-  height: 30px;
+  height: 100px;
 }
 
 .nav__links {
